feat: account reigstered in event sourcing fashioned